--- a/index.html
+++ b/index.html
@@ -35,46 +35,74 @@
       <h1>Mastercraft Bamboo Monitor Riser</h1>
       <h3>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</h3>
 
-      <button>Back this project</button>
-      <button>Bookmark</button>
+      <div id="btn">
+        <button id="btp">Back this project</button>
+        <button id="bm">Bookmark</button>
+      </div>
     </div>
 
     <div id="stats">
-      $89,914 of $100,000 backed
-      5,007 total backers
-      56 days left
+      <div id="nmbrs">
+        <div id="backed">
+          <h1>$89,914</h1> <br>
+          <h3>of $100,000 backed</h3>
+        </div>
+        <div id="backers">
+          <h1>5,007</h1> <br>
+          <h3>total backers</h3>
+        </div>
+        <div id="days">
+          <h1>56</h1> <br>
+          <h3>days left</h3>
+        </div>
+      </div>
+      <div>
+
+      </div>
     </div>
 
     <div id="about">
-        About this project
+        <h2>About this project</h2>
 
-      The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
-      to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
-      your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
-
-      Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
-      to allow notepads, pens, and USB sticks to be stored under the stand.
+      <p>The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
+        to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
+        your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
+  
+        Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
+        to allow notepads, pens, and USB sticks to be stored under the stand.</p>
       
-      Bamboo Stand
-      Pledge $25 or more
-      You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
-      you’ll be added to a special Backer member list.
+      <div class="pledge">
+        <div class="top">
+          <h2>Bamboo Stand</h2>
+          <p class="price">Pledge $25 or more</p>
+        </div>
+      <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+        you’ll be added to a special Backer member list.</p>
       101 left
-      Select Reward
+      <button>Select Reward</button>
+      </div>
 
-      Black Edition Stand
-      Pledge $75 or more
-      You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
-      member list. Shipping is included.
+      <div class="pledge">
+        <div class="top">
+          <h2>Black Edition Stand</h2>
+          <p class="price">Pledge $75 or more</p>
+        </div>
+      <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
+        member list. Shipping is included.</p>
       64 left
-      Select Reward
+      <button>Select Reward</button>
+      </div>
 
-      Mahogany Special Edition
-      Pledge $200 or more
-      You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
-      to our Backer member list. Shipping is included.
+      <div class="pledge">
+        <div class="top">
+          <h2>Mahogany Special Edition</h2>
+          <p class="price">Pledge $200 or more</p>
+        </div>
+      <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+        to our Backer member list. Shipping is included.</p>
       0 left
-      Out of Stock
+      <button>Out of Stock</button>
+      </div>
     </div>
 </div>
 
