--- a/index.html
+++ b/index.html
@@ -78,8 +78,12 @@
         </div>
       <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
         you’ll be added to a special Backer member list.</p>
-      101 left
-      <button>Select Reward</button>
+      <div class="container">
+        <div class="nmbr-left">
+          <h1>101</h1> <p>left</p>
+        </div>
+        <button class="btn-reward">Select Reward</button>
+      </div>
       </div>
 
       <div class="pledge">
@@ -89,8 +93,12 @@
         </div>
       <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
         member list. Shipping is included.</p>
-      64 left
-      <button>Select Reward</button>
+      <div class="container">
+        <div class="nmbr-left">
+          <h1>64</h1> <p>left</p>
+        </div>
+        <button class="btn-reward">Select Reward</button>
+      </div>
       </div>
 
       <div class="pledge">
@@ -100,8 +108,12 @@
         </div>
       <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
         to our Backer member list. Shipping is included.</p>
-      0 left
-      <button>Out of Stock</button>
+      <div class="container">
+        <div class="nmbr-left">
+        <h1>0</h1> <p>left</p>
+      </div>
+      <button class="btn-reward">Out of Stock</button>
+    </div>
       </div>
     </div>
 </div>
