--- a/index.html
+++ b/index.html
@@ -121,57 +121,106 @@
 </div>
   <!-- Selection modal start -->
 
-  Back this project
-  Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?
+<div id="modal" class="modal-selected">
+  <h2>Back this project</h2>
+  <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
 
-  Pledge with no reward
-  Choose to support us without a reward if you simply believe in our project. As a backer, 
-  you will be signed up to receive product updates via email.
+  <div class="pledge-select">
+    <input type="radio">
+    <div>
+      <h4>Pledge with no reward</h4>
+    <p>Choose to support us without a reward if you simply believe in our project. As a backer, 
+    you will be signed up to receive product updates via email.</p>
+    </div>
+  </div>
 
-  Bamboo Stand
-  Pledge $25 or more
-  You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
-  you’ll be added to a special Backer member list.
-  101 left
+  <div class="">
+    <div class="pledge-select">
+      <input type="radio">
+      <div>
+        <div class="select-top">
+          <h4>Bamboo Stand</h4>
+          <p>Pledge $25 or more</p>
+          <span>101 left</span>
+        </div>
+      <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
+        you’ll be added to a special Backer member list.</p>
+      </div>
+    </div>
+  
+    <!-- Selected pledge start -->
+    <div class="pledge-selected">
+      <p>Enter your pledge</p>
+      <div>
+        <input type="text" placeholder="$25">
+        <button>Continue</button>
+      </div>
+    </div>
+    <!-- Selected pledge end -->
+  </div>
 
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $25
-  Continue
-  <!-- Selected pledge end -->
+  <div class="">
+    <div class="pledge-select">
+      <input type="radio">
+      <div>
+        <div class="select-top">
+          <h4>Black Edition Stand</h4>
+          <p>Pledge $75 or more</p>
+          <span>64 left</span>
+        </div>
+      <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+        member list. Shipping is included.</p>
+      </div>
+    </div>
+  
+    <!-- Selected pledge start -->
+    <div class="pledge-selected"> 
+      <p>Enter your pledge</p>
+      <div>
+        <input type="text" placeholder="$75">
+        <button>Continue</button>
+      </div>
+    </div>
+    <!-- Selected pledge end -->
+  </div>
 
-  Black Edition Stand
-  Pledge $75 or more
-  You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
-  member list. Shipping is included.
-  64 left
+  <div class="">
+    <div class="pledge-select">
+      <input type="radio">
+      <div>
+        <div class="select-top">
+          <h4>Mahogany Special Edition</h4>
+          <p>Pledge $200 or more</p>
+          <span>0 left</span>
+        </div>
+      <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+        to our Backer member list. Shipping is included.</p>
+      </div>
+      </div>
 
-  <!-- Selected pledge start -->
-  Enter your pledge
-  $75
-  Continue
-  <!-- Selected pledge end -->
-
-  Mahogany Special Edition
-  Pledge $200 or more
-  You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
-  to our Backer member list. Shipping is included.
-  0 left
-
-  <!-- Selected pledge  start -->
-  Enter your pledge
-  $200
-  Continue
-  <!-- Selected pledge end -->
+          <!-- Selected pledge  start -->
+    <div class="pledge-selected">
+      <p>Enter your pledge</p>
+      <div>
+        <input type="text" placeholder="$200">
+        <button>Continue</button>
+      </div>
+    </div>
+    <!-- Selected pledge end -->
+  </div>
+  </div>
 
   <!-- Selection modal end -->
 
   <!-- Success modal start -->
 
-  Thanks for your support!
-  Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
-  an email once our campaign is completed.
-  Got it!
+  <div id="success">
+    <div id="icon-success" ></div>
+    <h3>Thanks for your support!</h3>
+    <p>Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
+      an email once our campaign is completed.</p>
+    <button>Got it!</button>
+  </div>
 
   <!-- Success modal end -->
 </body>
