--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
   <link rel="stylesheet" href="style.css">
 
-  <link rel="preconnect" href="https://fonts.gstatic.com"> 
-  <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@600;800&family=Roboto:wght@100;300;400;500&display=swap" rel="stylesheet"> 
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@400;500;700&display=swap" rel="stylesheet"> 
   
-  <title>Frontend Mentor | Interactive pricing component</title>
+  <title>Frontend Mentor | Crowdfunding product page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -20,54 +20,210 @@
   </style>
 </head>
 <body>
-
-<div id="main">
-  <div id="top">
-    <h1>Simple, traffic-based pricing</h1>
-    <p>Sign-up for our 30-day trial. No credit card required. </p>
+<div id="home">
+  <div id="head">
+    <div id="logo"></div>
+    <nav>
+      <a href="">About</a>
+      <a href="">Discover</a>
+      <a href="">Get Started</a>
+    </nav>
   </div>
 
-  <div id="container">
-  <div id="price">
-    <h2 id="pageviews"> <span id="valueViews">100K</span> PAGEVIEWS</h2>
-    <div id="month">
-      <h1><span id="valuePrice">$</span> </h1><h2>/month</h2>
+  <div id="main">
+    <div id="intro">
+      <img src="images/logo-mastercraft.svg" alt="">
+      <h1>Mastercraft Bamboo Monitor Riser</h1>
+      <h3>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</h3>
+
+      <div id="btn">
+        <button id="btp">Back this project</button>
+        <button id="bm">Bookmark</button>
+      </div>
+    </div>
+
+    <div id="stats">
+      <div id="nmbrs">
+        <div id="backed">
+          <h1>$89,914</h1> <br>
+          <h3>of $100,000 backed</h3>
+        </div>
+        <div id="backers">
+          <h1>5,007</h1> <br>
+          <h3>total backers</h3>
+        </div>
+        <div id="days">
+          <h1>56</h1> <br>
+          <h3>days left</h3>
+        </div>
+      </div>
+      <div id="progress-bar">
+        <div class="done"></div>
+      </div>
+    </div>
+
+    <div id="about">
+        <h2>About this project</h2>
+
+      <p>The Mastercraft Bamboo Monitor Riser is a sturdy and stylish platform that elevates your screen 
+        to a more comfortable viewing height. Placing your monitor at eye level has the potential to improve 
+        your posture and make you more comfortable while at work, helping you stay focused on the task at hand.
+  
+        Featuring artisan craftsmanship, the simplicity of design creates extra desk space below your computer 
+        to allow notepads, pens, and USB sticks to be stored under the stand.</p>
+      
+      <div class="pledge">
+        <div class="top">
+          <h2>Bamboo Stand</h2>
+          <p class="price">Pledge $25 or more</p>
+        </div>
+      <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and 
+        you’ll be added to a special Backer member list.</p>
+      <div class="container">
+        <div class="nmbr-left">
+          <h1>101</h1> <p>left</p>
+        </div>
+        <button class="btn-reward" onclick="showModal()">Select Reward</button>
+      </div>
+      </div>
+
+      <div class="pledge">
+        <div class="top">
+          <h2>Black Edition Stand</h2>
+          <p class="price">Pledge $75 or more</p>
+        </div>
+      <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer 
+        member list. Shipping is included.</p>
+      <div class="container">
+        <div class="nmbr-left">
+          <h1>64</h1> <p>left</p>
+        </div>
+        <button class="btn-reward" onclick="showModal()">Select Reward</button>
+      </div>
+      </div>
+
+      <div class="pledge out-of-stock">
+        <div class="top">
+          <h2>Mahogany Special Edition</h2>
+          <p class="price">Pledge $200 or more</p>
+        </div>
+      <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added 
+        to our Backer member list. Shipping is included.</p>
+      <div class="container">
+        <div class="nmbr-left">
+        <h1>0</h1> <p>left</p>
+      </div>
+      <button class="btn-reward">Out of Stock</button>
+    </div>
+      </div>
+    </div>
+</div>
+
+</div>
+  <!-- Selection modal start -->
+
+<div id="modal" class="modal-selected">
+  <h2>Back this project</h2>
+  <p>Want to support us in bringing Mastercraft Bamboo Monitor Riser out in the world?</p>
+
+  <div class="pledge-select">
+    <input type="radio" class="radiobtn" onclick="showPledge()">
+    <div>
+      <h4>Pledge with no reward</h4>
+    <p>Choose to support us without a reward if you simply believe in our project. As a backer, 
+    you will be signed up to receive product updates via email.</p>
     </div>
   </div>
-  <div id="slider">
-    <input type="range" min="1" max="6" value="50" step="1" class="slider" id="myRange">
-  </div>
-  <div id="month-mobile">
-    <h1><span id="valuePrice" >$</span> </h1><h2>/month</h2>
-  </div>
 
-  <div id="billing">
-    <p>Monthly Billing</p>
-    <label id="switch">
-      <input type="checkbox">
-      <span class="slide"></span>
-    </label>
-    <p>Yearly Billing</p> <span id="discount">25% discount</span>
-  </div>
-  <hr>
-
-  <div id="start-trial">
-    <ul>
-      <li>Unlimited websites</li>
-      <li>100% data ownership</li>
-      <li>Email reports</li>
-    </ul>
-
-    <button>Start my trial</button>
-  </div>
-  </div>
-</div>
+  <div class="">
+    <div class="pledge-select">
+      <input type="radio" class="radiobtn" onclick="showPledge()">
+      <div>
+        <div class="select-top">
+          <h4>Bamboo Stand</h4>
+          <p>Pledge $25 or more</p>
+          <span>101 left</span>
+        </div>
+      <p>You get an ergonomic stand made of natural bamboo. You've helped us launch our promotional campaign, and
+        you’ll be added to a special Backer member list.</p>
+      </div>
+    </div>
   
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Ursula Spela</a>.
+    <!-- Selected pledge start -->
+    <div class="pledge-selected">
+      <p>Enter your pledge</p>
+      <div>
+        <input type="text" placeholder="$25">
+        <button onclick="showSuccess()">Continue</button>
+      </div>
+    </div>
+    <!-- Selected pledge end -->
   </div>
 
+  <div class="">
+    <div class="pledge-select">
+      <input type="radio" class="radiobtn" onclick="showPledge()">
+      <div>
+        <div class="select-top">
+          <h4>Black Edition Stand</h4>
+          <p>Pledge $75 or more</p>
+          <span>64 left</span>
+        </div>
+      <p>You get a Black Special Edition computer stand and a personal thank you. You’ll be added to our Backer
+        member list. Shipping is included.</p>
+      </div>
+    </div>
+  
+    <!-- Selected pledge start -->
+    <div class="pledge-selected"> 
+      <p>Enter your pledge</p>
+      <div>
+        <input type="text" placeholder="$75">
+        <button onclick="showSuccess()">Continue</button>
+      </div>
+    </div>
+    <!-- Selected pledge end -->
+  </div>
+
+  <div class="">
+    <div class="pledge-select out-of-stock">
+      <input type="radio" class="radiobtn" onclick="showPledge()">
+      <div>
+        <div class="select-top">
+          <h4>Mahogany Special Edition</h4>
+          <p>Pledge $200 or more</p>
+          <span>0 left</span>
+        </div>
+      <p>You get two Special Edition Mahogany stands, a Backer T-Shirt, and a personal thank you. You’ll be added
+        to our Backer member list. Shipping is included.</p>
+      </div>
+      </div>
+
+          <!-- Selected pledge  start -->
+    <div class="pledge-selected">
+      <p>Enter your pledge</p>
+      <div>
+        <input type="text" placeholder="$200">
+        <button onclick="showSuccess()">Continue</button>
+      </div>
+    </div>
+    <!-- Selected pledge end -->
+  </div>
+  </div>
+
+  <!-- Selection modal end -->
+
+  <!-- Success modal start -->
+
+  <div id="success">
+    <div id="icon-success" ></div>
+    <h3>Thanks for your support!</h3>
+    <p>Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
+      an email once our campaign is completed.</p>
+    <button onclick="goHome">Got it!</button>
+  </div>
+
+  <!-- Success modal end -->
   <script src="main.js"></script>
 </body>
 </html>
