--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <h3>A beautiful & handcrafted monitor stand to reduce neck and eye strain.</h3>
 
       <div id="btn">
-        <button id="btp">Back this project</button>
+        <button id="btp" onclick="showModal()">Back this project</button>
         <button id="bm">Bookmark</button>
       </div>
     </div>
@@ -220,7 +220,7 @@
     <h3>Thanks for your support!</h3>
     <p>Your pledge brings us one step closer to sharing Mastercraft Bamboo Monitor Riser worldwide. You will get
       an email once our campaign is completed.</p>
-    <button onclick="goHome">Got it!</button>
+    <button onclick="goHome()">Got it!</button>
   </div>
 
   <!-- Success modal end -->
